Closed Bug 1623961 Opened 6 years ago Closed 6 years ago

Linking failure in nsEmbedFunctions.o with --disable-crashreporter

Categories

(Toolkit :: Crash Reporting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox-esr68 --- unaffected
firefox74 --- unaffected
firefox75 --- unaffected
firefox76 --- fixed

People

(Reporter: kats, Assigned: gsvelto)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Just built latest m-c on macOS, got this linker error:

 9:11.44 toolkit/library/build/XUL
 9:28.59 ld: warning: could not create compact unwind for _ffi_call_unix64: does not use RBP or RSP based frame
 9:32.51 Undefined symbols for architecture x86_64:
 9:32.51   "__ZN13CrashReporter25SetRemoteExceptionHandlerEPKcm", referenced from:
 9:32.58       __Z20XRE_InitChildProcessiPPcPK12XREChildData in nsEmbedFunctions.o
 9:33.98 ld: symbol(s) not found for architecture x86_64
 9:34.22 clang-9: error: linker command failed with exit code 1 (use -v to see invocation)

Assuming this is because I have ac_add_options --disable-crashreporter in my mozconfig, and bug 1622452 added a call to CrashReporter::SetRemoteExceptionHandler around here.

I've got a fix for this, I forgot to adjust the dummy implementation that's used when crash reporting is disabled.

Assignee: nobody → gsvelto
Status: NEW → ASSIGNED

I changed the commit message and phabricator decided my goal was to create a new revision :-\

Attachment #9134818 - Attachment is obsolete: true
Attachment #9134761 - Attachment description: Bug 1623961 - Adjust the dummy exception handler to reflect the new prototype for SetRemoteExceptionHandler() r=froydnj → Bug 1623961 - Adjust the dummy crash reporter to reflect the new prototype for SetRemoteExceptionHandler() r=kats

Alright, now the patch has been updated correctly.

Pushed by gsvelto@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/63cc64fbbace Adjust the dummy crash reporter to reflect the new prototype for SetRemoteExceptionHandler() r=froydnj,kats
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Regressions: 1629300
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: