Bug 1623961 - Adjust the dummy crash reporter to reflect the new prototype for SetRemoteExceptionHandler() r=froydnj,kats

Differential Revision: https://phabricator.services.mozilla.com/D67675